# genjutsu

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
crates/gj-app/: .env  Cargo.toml
crates/gj-app/src/: app.rs  backend.rs  db.rs  error.rs  events.rs  generator.rs  gfx.rs  job.rs  lgm_worker.rs  main.rs  state.rs  ui.rs  worker.rs
crates/gj-app/src/backend/: config.rs  routes.rs  schemas.rs  state.rs
crates/gj-app/src/backend/routes/: job.rs
crates/gj-app/src/db/: job.rs
crates/gj-app/src/generator/: backend.rs  db.rs
crates/gj-app/src/generator/backend/: config.rs  routes.rs  schemas.rs  state.rs
crates/gj-app/src/generator/backend/routes/: job.rs
crates/gj-app/src/generator/db/: job.rs
crates/gj-app/src/ui/: central_panel.rs  panels.rs  queue_panel.rs  side_panel.rs  top_panel.rs
crates/gj-app/src/ui/panels/: central_panel.rs  side_panel.rs  top_panel.rs
crates/gj-core/src/: gaussian_cloud.rs  lib.rs  model_types.rs
crates/gj-lgm/: Cargo.toml
crates/gj-lgm/src/: lib.rs  text_to_image.rs
crates/gj-splat/shaders/: gaussian.wgsl
crates/gj-splat/src/: camera.rs  renderer.rs
python/: Dockerfile  docker-compose.yml  environment.yml  gaussian_dreamer.py  multi_model_service.py  requirements.txt  setup_local.sh
python/api/: main.py  requirements.txt
python/models/: shap_e.py
python/shared/schemas/: jobs.py
python/worker/: requirements.txt  tasks.py  worker.py
