[package]
name = "gj-app"
edition.workspace = true
version.workspace = true
readme.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
gj-core.path = "../gj-core"
gj-splat.path = "../gj-splat"
anyhow.workspace = true
burn.workspace = true
burn-ndarray.workspace = true
burn-wgpu.workspace = true
bytemuck.workspace = true
env_logger.workspace = true
egui.workspace = true
egui-winit.workspace = true
egui-wgpu.workspace = true
glam.workspace = true
image.workspace = true
log.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true
winit.workspace = true
axum = { version = "0.8.7", features = ["json"]}
dolly = "0.6.0"
rfd = "0.16.0"
pollster = "0.4.0"
dotenvy = "0.15.7"